# FrameLanguageLM

./: .gitignore  LICENSE  PLAN.md  README.md  SPEC.md  STATUS.md  pyproject.toml  serve.py
.github/workflows/: pages.yml
docs/: CURSO.md  HANDOFF.md  RESULTS.md  TENSORBOARD.md  VISION.md
docs/product/: 01_webapp_architecture.md  02_filmaffinity_public_profile.md  03_search_filters.md  04_cli_packaging.md  05_huggingface_publication.md  06_public_github_presentation.md  PUBLISH.md
frame_language_lm/: cli.py  features.py  model.py
frame_language_lm/importers/: matching.py  netflix.py
framelm/: data.py  eval.py  infer.py  loss.py  model.py  train.py
framelm/importers/: __init__.py  filmaffinity.py
scripts/: build_catalog.py  build_full_matrix.py  build_vocab.py  debug_eval.py  download_data.py  dual_report.py  export_onnx.py  fetch_tmdb.py  import_user.py  measure_writers.py  runpod_train_ablation.sh  runpod_train_baseline.sh  runpod_train_iddropout.sh  smoke_dual.py  smoke_features.py  smoke_test.py  spot_check.py  validate_coldstart.py  verify_onnx.py  vocab_analysis.py
webapp/: index.html
webapp/css/: style.css
webapp/js/: app.js  filters.js  inference.js  matching.js  npy.js  parser.js  ui.js
