[project]
name = "framelm"
version = "0.1.0"
description = "A language model whose vocabulary is films — sequential recommender over 100k titles"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "tensorboard>=2.21.0",
    "torch>=2.12.1",
    "tqdm>=4.68.4",
]

[dependency-groups]
dev = []

[tool.uv]
package = false
