[project]
name = "frame-language-lm"
version = "1.0.0"
description = "A language model whose vocabulary is films — sequential recommender over 100k titles"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.5.4",
    "httpx>=0.28.1",
    "numpy>=2.5.1",
    "onnxruntime>=1.27.0",
    "rapidfuzz>=3.14.5",
    "rich>=13.0",
    "huggingface-hub>=0.20",
]

[project.scripts]
frame-language-lm = "frame_language_lm.cli:main"

[tool.setuptools.packages.find]
include = ["frame_language_lm*"]

[tool.uv]
package = true
